# dx_rt

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  RELEASE_NOTES.md  RELEASE_NOTES_MATERIAL.md  build.sh  install.sh  mkdocs.yml
.github/workflows/: gh-cloud-merge-staging-to-main.yml
cli/: CMakeLists.txt  dxrt-cli.cpp  dxrtd.cpp  parse_model.cpp  run_model.cpp
cli/dxbenchmark/: CMakeLists.txt  dxbenchmark.cpp
cli/dxbenchmark/core/include/: render.h  runner.h  utils.h
cli/dxbenchmark/core/src/: render.cpp  runner.cpp  utils.cpp
cli/dxtop/: CMakeLists.txt  dxtop.cpp
cli/dxtop/core/: curse_header.h  npu_core.cpp  npu_device.cpp  npu_device.h  npu_monitor.cpp
cli/dxtop/core/input_provider/: linux_input_provider.h
cli/dxtop/core/util/: npu_device_formatter.cpp  unicode_literal_support.cpp  unicode_literal_support.h
cli/dxtop/core/view/: linux_renderer.h
cmake/: dxrt.function.cmake
docs/: mkdocs.yml
docs/source/docs/: 01_DXNN_Runtime_Overview.md  02_Installation_on_Linux.md  03_Installation_on_Windows.md  04_Model_Inference.md  05_Command_Line_Interface.md  06_Inference_API.md  07_Multi_Input_Inference.md  08_Global_Instance.md  09_01_C++_Tutorials.md  09_02_Python_Tutorials.md  10_01_C++_API_Reference.md  10_02_Python_API_Reference.md  Appendix_Change_Log.md
dx_report/sanity/: Sanity.sh
examples/cpp/: CMakeLists.txt
examples/cpp/check_versions/: CMakeLists.txt
examples/cpp/display_async_models_1/: CMakeLists.txt  display_async_models_1.cpp
examples/cpp/display_async_models_2/: CMakeLists.txt  display_async_models_2.cpp
examples/cpp/display_async_pipe/: CMakeLists.txt  display_async_pipe.cpp
examples/cpp/display_async_thread/: CMakeLists.txt  display_async_thread.cpp
examples/cpp/display_async_wait/: CMakeLists.txt  display_async_wait.cpp
examples/cpp/include/: logger.h
examples/cpp/multi_input_model_inference/: CMakeLists.txt  multi_input_model_inference.cpp
examples/cpp/run_async_model/: CMakeLists.txt  run_async_model.cpp
examples/cpp/run_async_model_bound/: CMakeLists.txt  run_async_model_bound.cpp
examples/cpp/run_async_model_bufcount/: CMakeLists.txt  run_async_model_bufcount.cpp
examples/cpp/run_async_model_conf/: CMakeLists.txt  run_async_model_conf.cpp
examples/cpp/run_async_model_output/: CMakeLists.txt  run_async_model_output.cpp
examples/cpp/run_async_model_profiler/: CMakeLists.txt  run_async_model_profiler.cpp
examples/cpp/run_async_model_thread/: CMakeLists.txt  run_async_model_thread.cpp
examples/cpp/run_async_model_wait/: CMakeLists.txt  run_async_model_wait.cpp
examples/cpp/run_batch_model/: CMakeLists.txt  run_batch_model.cpp
examples/cpp/run_sync_model/: CMakeLists.txt  run_sync_model.cpp
examples/cpp/run_sync_model_bound/: CMakeLists.txt  run_sync_model_bound.cpp
examples/cpp/run_sync_model_bufcount/: CMakeLists.txt  run_sync_model_bufcount.cpp
examples/cpp/run_sync_model_memory/: CMakeLists.txt  run_sync_model_memory.cpp
examples/cpp/run_sync_model_output/: CMakeLists.txt  run_sync_model_output.cpp
examples/python/: multi_input_model_inference.py  run_async_model.py  run_async_model_bufcount.py  run_async_model_callback.py  run_async_model_conf.py  run_async_model_profiler.py  run_async_model_thread.py  run_async_model_wait.py  run_batch_model.py  run_sync_model.py  run_sync_model_bound.py  run_sync_model_bufcount.py  run_sync_model_memory.py
lib/: CMakeLists.txt  buffer.cpp  circular_buffer.cpp  cli.cpp  cli_support_function.cpp  configuration.cpp  cpu_handle.cpp  cpu_handle_worker.cpp  datatype.cpp  device.cpp  device_event_worker.cpp  device_info_status.cpp  device_input_worker.cpp  device_output_worker.cpp  device_struct_operators.cpp  device_util.cpp  device_version.cpp  driver.cpp  exception_handler.cpp  filesys_support.cpp  fixed_size_buffer.cpp  fw.cpp  inference_engine.cpp  inference_job.cpp  inference_option.cpp  inference_timer.cpp  memory.cpp  model.cpp  model_parser_factory.cpp  multiprocess_memory.cpp  npu_format_handler.cpp  npu_memory_cache.cpp  objects_pool.cpp  parse_model.cpp  ppu_binary_parser.cpp  profiler.cpp  request.cpp  request_response.cpp  runtime_event_dispatcher.cpp  task.cpp  (+5 more)
lib/bindings/: CMakeLists.txt
lib/bindings/python/src/: CMakeLists.txt
lib/cfg/: common.cfg
lib/data/: ppcpu.cpp  ppcpu.h  ppcpu_data.cpp
lib/device_pool/: acc_device_task_layer.cpp  device_compativility_layer.cpp  device_core.cpp  device_pool.cpp  device_task_layer.cpp  nfh_layer.cpp  request_response_class.cpp  service_abstract_layer.cpp  service_layer_factory.cpp  service_util.cpp  std_device_task_layer.cpp
lib/driver_adapter/: driver_adapter.cpp  driver_adapter_factory.cpp  linux_driver_adapter.cpp  mock_driver_adapter.cpp  network_driver_adapter.cpp  windows_driver_adapter.cpp
lib/dxrt_service/: dxrt_service.cpp  dxrt_service_err.cpp  memory_service.cpp  memory_service.hpp  process_with_device_info.cpp  process_with_device_info.h  request_manager.cpp  schedule_service.cpp  scheduler_service.h  service_device.cpp  service_device.h  service_error.h  usage_timer.cpp  usage_timer.h
lib/exception/: exception.cpp  server_err.cpp
lib/include/dxrt/: buffer.h  circular_buffer.h  circular_data_pool.h  cli.h  cli_support.h  command.h  common.h  configuration.h  cpu_handle.h  datatype.h  device.h  device_compatibility_layer.h  device_core.h  device_info_status.h  device_pool.h  device_struct.h  device_struct_operators.h  device_task_layer.h  device_util.h  device_version.h  driver.h  driver_net.h  dxrt_api.h  exception_handler.h  filesys_support.h  fixed_size_buffer.h  fw.h  gen.h.in  handler_que_template.h  inference_engine.h  inference_job.h  inference_option.h  model.h  (+30 more)
lib/parsers/: v6_model_parser.cpp  v7_model_parser.cpp  v8_model_parser.cpp
lib/resource/: log_messages.cpp  log_messages.h
python_cross_package/: make_cross_wheel.sh
python_cross_package/cross_files/: CMakeLists.txt  pyproject.toml  toolchain.cmake
python_package/: pyproject.toml
python_package/cli/: parse_model.py  run_model.py
scripts/: common_util.sh  install_python_and_venv.sh
(+45 files in other folders)
